# Logify

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/tutorials/: 01_quick_start.md  02_formatters.md  03_handlers.md  04_filters_context.md  05_configuration.md  06_advanced.md  README.md
logify/: API.md  ARCHITECTURE.md  __init__.py
logify/api/: __init__.py  logger.py
logify/config/: __init__.py  loader.py  parser.py
logify/core/: __init__.py  levels.py  manager.py  record.py
logify/filters/: __init__.py  base.py  context_filter.py  level_filter.py  regex_filter.py
logify/formatters/: __init__.py  base.py  color.py  json_formatter.py  text.py
logify/handlers/: __init__.py  async_handler.py  base.py  console.py  file.py  network.py  rotating.py
tests/: __init__.py
tests/api/: __init__.py  test_logger.py
tests/config/: __init__.py  test_loader.py  test_parser.py
tests/core/: __init__.py  test_levels.py  test_manager.py  test_record.py
tests/filters/: __init__.py  test_base.py  test_context_filter.py  test_level_filter.py  test_regex_filter.py
tests/formatters/: __init__.py  test_base.py  test_color.py  test_json_formatter.py  test_text.py
tests/handlers/: __init__.py  test_async_handler.py  test_base.py  test_console.py  test_file.py  test_network.py  test_rotating.py
